--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,29 @@
-name: Deploy to dev server
+name: Test and Deploy
 
 on:
   push:
     branches: [main]
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+
+      - name: Install and test backend
+        working-directory: ./backend
+        run: npm install && npm test
+
+      - name: Install and test frontend
+        working-directory: ./frontend
+        run: npm install && npm test
+
   deploy:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -19,11 +37,12 @@ jobs:
           script: |
             cd ~/link-tracker
             git pull origin main
-            echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" > .env
-            echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
-            echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
-            echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
-            echo "CORS_ORIGIN=${{ secrets.CORS_ORIGIN }}" >> .env
-            docker compose pull
+            cat > .env << ENVEOF
+            POSTGRES_USER=${{ secrets.POSTGRES_USER }}
+            POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+            POSTGRES_DB=${{ secrets.POSTGRES_DB }}
+            BASE_URL=${{ secrets.BASE_URL }}
+            CORS_ORIGIN=${{ secrets.CORS_ORIGIN }}
+            ENVEOF
             docker compose up -d --build
             docker compose exec -T backend node -e "import('./src/db/index.js').then(m => m.migrate())"
