--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "node --watch src/index.js"
+    "dev": "node --watch src/index.js",
+    "test": "vitest run"
   },
   "dependencies": {
     "express": "^5.0.1",
@@ -15,5 +16,9 @@
     "express-rate-limit": "^7.5.0",
     "rate-limit-redis": "^4.2.0",
     "dotenv": "^16.4.7"
+  },
+  "devDependencies": {
+    "vitest": "^3.0.0",
+    "supertest": "^7.0.0"
   }
 }
